chore(button): wip button component ui

--- a/www/styles/main.scss
+++ b/www/styles/main.scss
@@ -3,3 +3,19 @@
 @import 'tailwindcss/utilities';
 
 @import '@code-hike/mdx/dist/index.css';
+
+.ch-codegroup {
+  box-shadow: none;
+}
+
+.ch-code-scroll-parent {
+  font-size: 12px;
+}
+
+// :root {
+
+// }
+
+// .dark {
+
+// }
