--- a/packages/ui/button/button.module.scss
+++ b/packages/ui/button/button.module.scss
@@ -2,7 +2,7 @@
 @use 'sass:color';
 
 .btn {
-  @apply inline-flex items-center justify-center whitespace-nowrap px-4 font-semibold;
+  @apply inline-flex items-center justify-center whitespace-nowrap px-4 text-sm font-semibold;
   min-width: 60px;
   &:focus,
   &:focus-visible {
