chore: update dependencies

--- a/packages/ui/styles/variables.module.scss
+++ b/packages/ui/styles/variables.module.scss
@@ -25,7 +25,7 @@ $red800: #8c2822;
 $red900: #752522;
 $red950: #3f0f0d;
 
-$green50: #ecfdf5;
+$green50: #4fb585;
 $green100: #d1fae5;
 $green200: #a7f3d0;
 $green300: #6ee7b7;
