--- a/packages/ui/button/button.module.scss
+++ b/packages/ui/button/button.module.scss
@@ -1,16 +1,17 @@
-@use '../styles//variables.module.scss';
+@use '../styles/variables.module.scss';
 @use 'sass:color';
 
 .btn {
-  @apply inline-flex items-center justify-center whitespace-nowrap px-4 text-sm font-semibold;
+  @apply inline-flex items-center
+    justify-center whitespace-nowrap px-4 text-sm font-semibold;
   min-width: 60px;
   &:focus,
   &:focus-visible {
     @apply outline-none ring-2 ring-offset-1 ring-offset-white;
   }
   &:disabled {
-    background-color: var(--btn-disabled-bg, variables.$gray400);
-    color: var(--btn-disabled-fg, variables.$gray600);
+    background-color: var(--btn-disabled-bg, #{variables.$gray400});
+    color: var(--btn-disabled-fg, #{variables.$gray600});
     cursor: not-allowed;
   }
 }
@@ -30,35 +31,35 @@
   border-radius: var(--btn-radius, 8px);
 }
 
-.default {
-  background-color: var(--btn-default-bg, variables.$black);
-  color: var(--btn-default-fg, variables.$white);
+.primary {
+  background-color: var(--btn-primary-bg, #{variables.$black});
+  color: var(--btn-primary-fg, #{variables.$white});
 }
 
 .secondary {
-  background-color: var(--btn-secondary-bg, variables.$gray50);
-  color: var(--btn-secondary-fg, variables.$black);
-  border: 1px solid variables.$gray200;
+  background-color: var(--btn-secondary-bg, #{variables.$gray50});
+  color: var(--btn-secondary-fg, #{variables.$black});
+  border: 1px solid #{variables.$gray200};
 }
 
 .danger {
-  background-color: var(--btn-danger-bg, variables.$red600);
-  color: var(--btn-danger-fg, variables.$white);
+  background-color: var(--btn-danger-bg, #{variables.$red600});
+  color: var(--btn-danger-fg, #{variables.$white});
 }
 
 .success {
-  background-color: var(--btn-success-bg, variables.$green700);
-  color: var(--btn-success-fg, variables.$white);
+  background-color: var(--bg-success-bg, #{variables.$green600});
+  color: var(--btn-success-fg, #{variables.$white});
 }
 
 .warning {
-  background-color: var(--btn-warning-bg, variables.$orange500);
-  color: var(--btn-warning-fg, variables.$white);
+  background-color: var(--btn-warning-bg, #{variables.$orange500});
+  color: var(--btn-warning-fg, #{variables.$white});
 }
 
 .info {
-  background-color: var(--btn-info-bg, variables.$blue400);
-  color: var(--btn-info-fg, variables.$blue950);
+  background-color: var(--btn-info-bg, #{variables.$blue400});
+  color: var(--btn-info-fg, #{variables.$blue950});
 }
 
 :global(.dark) {
@@ -68,17 +69,17 @@
       @apply outline-none ring-2 ring-offset-1 ring-offset-black;
     }
     &:disabled {
-      background-color: var(--btn-disabled-bg, variables.$gray600);
-      color: var(--btn-disabled-fg, variables.$gray400);
+      background-color: var(--btn-disabled-bg, #{variables.$gray600});
+      color: var(--btn-disabled-fg, #{variables.$gray400});
     }
   }
-  .default {
-    background-color: var(--btn-default-bg, variables.$white);
-    color: var(--btn-default-fg, variables.$black);
+  .primary {
+    background-color: var(--btn-primary-bg, #{variables.$white});
+    color: var(--btn-primary-fg, #{variables.$black});
   }
   .secondary {
-    background-color: var(--btn-secondary-bg, variables.$gray800);
-    color: var(--btn-secondary-fg, variables.$white);
-    border: 1px solid variables.$gray700;
+    background-color: var(--btn-secondary-bg, #{variables.$gray800});
+    color: var(--btn-secondary-fg, #{variables.$white});
+    border: 1px solid #{variables.$gray700};
   }
 }
