chore: update ui button

--- a/www/styles/main.scss
+++ b/www/styles/main.scss
@@ -3,9 +3,8 @@
 @import 'tailwindcss/utilities';
 
 @import '@code-hike/mdx/dist/index.css';
+@import '@codecentrum/piksel-ui/dist/style/piksel.css';
 
 // custome codehide codeblock
 @import './code-hike-custom.scss';
 @import './typography.scss';
-
-$green600: #059669;
