chore: update primary color

--- a/packages/ui/styles/variables.scss
+++ b/packages/ui/styles/variables.scss
@@ -5,7 +5,7 @@
   --rounded-large: 8px;
 
   // Token Button
-  --btn-bg-primary: 221, 83%, 53%; //#2563eb
+  --btn-bg-primary: 172, 37%, 42%; // user primary color
   --btn-bg-secondary: 240, 5%, 65%; //#a1a1aa
   --btn-bg-destructive: 0, 72%, 51%; //#dc2626;
 }
