--- a/packages/ui/styles/typography.scss
+++ b/packages/ui/styles/typography.scss
@@ -1,5 +1,5 @@
 :is(h1, h2, h3, h4, h5, h6) {
-  font-weight: 700;
+  font-weight: 600 !important;
   margin-bottom: 16px;
 }
 
@@ -36,10 +36,10 @@
 :is(p, span) {
   font-size: inherit;
   line-height: 24px;
-  @apply text-gray-700 dark:text-gray-300;
+  color: hsl(var(--text-paragraph));
 }
 
 :is(a) {
   font-size: inherit;
-  @apply text-gray-700 dark:text-gray-300;
+  color: hsl(var(--text-paragraph));
 }
