--- a/packages/ui/styles/typography.scss
+++ b/packages/ui/styles/typography.scss
@@ -1,6 +1,6 @@
 :is(h1, h2, h3, h4, h5, h6) {
   font-weight: 600 !important;
-  margin-bottom: 16px;
+  margin-bottom: 16px !important;
 }
 
 :is(h1, .h1) {
