chore: wip tooltip component

--- a/packages/ui/src/badge/styles.scss
+++ b/packages/ui/src/badge/styles.scss
@@ -1,7 +1,7 @@
 @import '../../styles/bases.scss';
 
 .badge {
-  @apply flex items-center justify-center px-2 font-medium transition-all;
+  @apply inline-flex items-center justify-center px-2 font-medium transition-all;
 
   // Primary
   &--primary {
