--- a/packages/ui/styles/bases.scss
+++ b/packages/ui/styles/bases.scss
@@ -24,5 +24,8 @@
   --bg-base: 0, 0%, 100%; // white
   --fg-base: 0, 0%, 0%; // black
 
+  --bg-base: 0, 0%, 100%; // white
+  --fg-base: 0, 0%, 0%; // black
+
   --text-paragraph: 216, 12%, 84%;
 }
